# ChatRoom

./: CMakeLists.txt  README.md  chat.sql  nginxConfig.md
example/: CMakeLists.txt  ChatFollower.cc  README.md  UserFollowerRun.cc  client.cc  proxyRun.cc  userMasterRun.cc
include/base/: CommonConfig.h  MysqlConn.h  MysqlConnectionPool.h  Redis.h  Socket.h  ZookeeperUtil.h
include/chat/: ChatFollower.h  ChatMessage.pb.h
include/chat/proto/: ChatMessage.proto
include/proxy/: Proxy.pb.h  ProxyServer.h  ProxyService.h
include/proxy/proto/: Proxy.proto
include/rpc/: RpcChannel.h  RpcController.h  RpcProvider.h
include/user/: User.pb.h  UserFollower.h  UserMaster.h  UserService.pb.h
include/user/proto/: User.proto  UserService.proto
src/: CMakeLists.txt
src/base/: CommonConfig.cc  MysqlConn.cc  MysqlConnectionPool.cc  Redis.cc  ZookeeperUtil.cc
src/base/test/: CMakeLists.txt  redisTest.cc  zookeeperTest.cc
src/chat/: ChatFollower.cc  ChatMessage.pb.cc  README.md
src/proxy/: Proxy.pb.cc  ProxyServer.cc  ProxyService.cc
src/rpc/: README.md  RpcChannel.cc  RpcController.cc  RpcProvider.cc  rpcheader.pb.cc
src/rpc/rpc/: RpcChannel.cc  RpcProvider.cc
src/rpc/test/: CMakeLists.txt  callerTest.cc  rpcServerTest.cc  user.pb.cc  user.pb.h  user.proto
src/user/: README.md  User.pb.cc  UserFollower.cc  UserMaster.cc
